--- a/LlmInferenceUnit1/Jasmine_Unit_1_lecture_2_home_work.ipynb
+++ b/LlmInferenceUnit1/Jasmine_Unit_1_lecture_2_home_work.ipynb
@@ -1216,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "id": "GZFfljDiNgPf"
    },
@@ -1225,14 +1225,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "58°F\n"
+      "74°F\n"
      ]
     }
    ],
    "source": [
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
-    "url = 'https://www.accuweather.com/en/us/cleveland/44113/weather-forecast/350127#google_vignette'\n",
+    "url = 'https://www.accuweather.com/en/us/southgate/34239/weather-forecast/2258073?current=true'\n",
     "# Add headers to mimic a web browser request\n",
     "headers = {\n",
     "'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/108.0.0.0 Safari/537.36'\n",
